--- a/src/App.scss
+++ b/src/App.scss
@@ -34,7 +34,7 @@ body {
     size: cover;
     repeat: no-repeat;
     position: center center;
-    image: url("./bg.jpg");
+    image: url("https://criptosenargentina.vercel.app/bg.jpg");
     z-index: -1;
   }
 
